añadir tipografia de google y adaptarla

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="icon" type="image/x-icon" href="/img/fidel-sanchez_favicon.svg">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,200;0,400;0,600;0,800;1,400;1,600&display=swap"
+        rel="stylesheet">
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="https://unpkg.com/lite-vimeo-embed"></script>
 
@@ -1164,19 +1169,22 @@
 
             <div class="texto">
                 <p>Hola!<br>
-                Soy Fidel, un diseñador gráfico diestro en la creación de composiciones visuales atractivas utilizando tipografías,
-                imágenes e ilustraciones. Una persona motivada que se enorgullece de crear diseños gráficos destacables,
-                mediante diferentes habilidades creativas. Acostumbrado a colaborar con otros profesionales afines para
-                alcanzar los objetivos marcados.<br>
-                <br><br>
-                <i lang="en">Hi!<br>
+                    Soy Fidel, un diseñador gráfico diestro en la creación de composiciones visuales atractivas
+                    utilizando tipografías,
+                    imágenes e ilustraciones. Una persona motivada que se enorgullece de crear diseños gráficos
+                    destacables,
+                    mediante diferentes habilidades creativas. Acostumbrado a colaborar con otros profesionales afines
+                    para
+                    alcanzar los objetivos marcados.<br>
+                    <br><br>
+                    <i lang="en">Hi!<br>
 
-                    I'm Fidel, a skilled Graphic Designer adept in creating powerful visual designs
-                    using
-                    digital illustrations, images, and typography. A self-motivated individual who takes pride in
-                    creating compelling graphic designs, in addition to other creative skills. Accustomed to
-                    collaborating with other creative professionals to achieve project goals.</i>
-                </p>            
+                        I'm Fidel, a skilled Graphic Designer adept in creating powerful visual designs
+                        using
+                        digital illustrations, images, and typography. A self-motivated individual who takes pride in
+                        creating compelling graphic designs, in addition to other creative skills. Accustomed to
+                        collaborating with other creative professionals to achieve project goals.</i>
+                </p>
             </div>
     </section>
 
