A añadir hoja de estilos para github pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="theme-color" content="black">
     <link rel="canonical" href="https://fidelsanchez.com">
     <link rel="icon" type="image/x-icon" href="/img/fidel-sanchez_favicon.svg">
+    <link rel="stylesheet" href="https://fidelsanchezgdlt.github.io/fidelsanchez/css/styles.css/">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
