Corregir titulo (Infografía objetivos Nikkor)

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                                     aria-hidden="true"></i></span>
                             <span data-nav data-open="foto-2" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
-                            <h2>Cartel BenQ</h2>
+                            <h2>Infografía objetivos Nikkor</h2>
                         </div>
 
                         <div class="modal-body">
